# dblfetch

./: Cargo.toml  Dockerfile  README.md  dblfetch.yaml
src/: deserialize.rs  main.rs
src/dblfetch/: config.rs  downlister.rs  mod.rs
src/deserialize/: config.rs  downlister.rs  mod.rs
