[package]
name = "dblfetch"
version = "0.1.0"
authors = ["hoti <code@feedyourhead.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
reqwest = { version = "0.11.14", features = ["blocking"] }
regex = "1"
simplelog = { version = "^0.12.0", features = ["paris"] }
log = "0.4.17"
config = "0.13.1"
